perf: virtual threads, route cache, ZGC — high-concurrency optimization
- Virtual Threads: Jetty QueuedThreadPool.setVirtualThreadsExecutor() for I/O-bound request handling
- Router cache: ConcurrentHashMap pattern match cache (1024 max), cleared on route mutation
- Context.headers(): Collections.unmodifiableMap view (no copy overhead)
- Docker: ZGC + ZGenerational GC for low-latency response times

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>